Fixed overflow issue on menu section

--- a/CSS/sections/menu.css
+++ b/CSS/sections/menu.css
@@ -58,7 +58,7 @@
     grid-auto-columns: calc(100% / var(--num-cards) - 25px);
     gap: var(--gap);
     padding: 25px calc(50px + var(--gap));
-    overflow: scroll;
+    overflow-x: scroll;
 }
 
 .menu__card-list:has(:hover)>.menu__card:not(:hover),
